--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-site_favicon: favicon.ico
+title: Welcome To The Home Of "The Goosenator 6000"!
 github:
   is_project_page: false
