--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Welcome To The Home Of "The Goosenator 6000"!
+title: Welcome To The Home Of The Goosenator 6000!
 github:
   is_project_page: false
