--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 title: Welcome To The Home Of The Goosenator 6000!
+author: Toma Brasoveanu
 github:
   is_project_page: false
