--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ title: Welcome To The Home Of The Goosenator 6000!
 author: Toma Brasoveanu
 github:
   is_project_page: false
+exclude:
+  - README.md
+  - LICENSE
+rss-description: The Goosenator 6000
