--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ exclude:
   - LICENSE
 rss-description: The Goosenator 6000
 plugins:
-  -jekyll-responsive_image
-  -emoji_for_jekyll
+  - jekyll-responsive_image
+  - emoji_for_jekyll
